Trying with more data sources

--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -287,19 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-12 20:06:16.790\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m77\u001b[0m - \u001b[1mscraping job listings from https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm?\u001b[0m\n",
-      "\u001b[32m2024-08-12 20:06:16.800\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m85\u001b[0m - \u001b[1mscraped first page of jobs of https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm?, scraping remaining 0 pages\u001b[0m\n",
-      "\u001b[32m2024-08-12 20:06:16.801\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_jobs\u001b[0m:\u001b[36m92\u001b[0m - \u001b[1mscraped 0 jobs from https://www.glassdoor.com/Jobs/98point6-Jobs-E1181484.htm? in 1 pages\u001b[0m\n",
-      "\u001b[32m2024-08-12 20:06:16.801\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
-      "\u001b[32m2024-08-12 20:06:16.813\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
-      "\u001b[32m2024-08-12 20:06:18.340\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
+      "\u001b[32m2024-08-12 20:12:20.847\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
+      "\u001b[32m2024-08-12 20:12:20.859\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
+      "\u001b[32m2024-08-12 20:12:22.389\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
      ]
     },
     {
@@ -307,8 +304,16 @@
      "output_type": "stream",
      "text": [
       "Glassdoor: The prompt context has 16,256 characters in 30 reviews\n",
-      "19,686 characters in unified context\n",
-      "Written to evaluation/98point6_98point6/20240812_200656.md\n"
+      "Failed to get article from https://www.reuters.com/article/brief-98point6-inc-files-to-say-raised-2/brief-98point6-inc-files-to-say-raised-29-1-million-in-equity-financing-idUSFWN1M10QV/: 401\n",
+      "Failed to get article from https://www.crunchbase.com/organization/mdlive/company_overview/overview_timeline: 403\n",
+      "Failed to get article from https://ptdiocese.org/benefits: 403\n",
+      "Failed to get article from https://www.fiercehealthcare.com/health-tech/transcarent-launches-direct-employer-solution-partnership-advocate-mount-sinai-other: 403\n",
+      "Failed to get article from https://www.360dx.com/business-news/barda-launches-diagnostics-medical-devices-accelerator: 403\n",
+      "Failed to get article from https://www.zoominfo.com/c/brightmd-inc/371829919: 403\n",
+      "Failed to get article from https://forgeglobal.com/search-private-companies/healthcare/digital-health/: 403\n",
+      "Failed to get article from https://www.modernhealthcare.com/digital-health/talkspace-transcarent-partnerships-mergers-glen-tullman-jon-cohen: 403\n",
+      "78,352 characters in unified context\n",
+      "Written to evaluation/98point6_98point6/20240812_201401.md\n"
      ]
     }
    ],
@@ -458,9 +463,10 @@
     "\n",
     "await unified_summary(\n",
     "    CompanyProduct.same(\"98point6\"), \n",
-    "    num_reddit_threads=5, \n",
+    "    num_reddit_threads=10, \n",
     "    max_glassdoor_review_pages=3, \n",
-    "    max_glassdoor_job_pages=2\n",
+    "    max_glassdoor_job_pages=0,\n",
+    "    max_news_articles=50\n",
     "    )"
    ]
   },
