Slight tuning of aggregation prompt, adding Crunchbase link, more useful debug logging

--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -237,13 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from crunchbase import find_people_url, parse\n",
     "import scrapfly_scrapers.crunchbase\n",
     "import jinja2\n",
+    "from datetime import datetime\n",
     "\n",
     "scrapfly_scrapers.crunchbase.BASE_CONFIG[\"cache\"] = True\n",
     "templates = jinja2.Environment(loader=jinja2.FileSystemLoader(\"templates\"))\n",
@@ -262,7 +263,7 @@
     "        pprint(crunchbase_raw_response)\n",
     "    organization, employees = parse(crunchbase_raw_response)\n",
     "\n",
-    "    return templates.get_template(\"crunchbase.md\").render(organization=organization, employees=employees)\n"
+    "    return templates.get_template(\"crunchbase.md\").render(organization=organization, employees=employees, current_year=datetime.now().year)\n"
    ]
   },
   {
@@ -287,25 +288,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-12 20:16:41.042\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
-      "\u001b[32m2024-08-12 20:16:41.057\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 2 pages\u001b[0m\n",
-      "\u001b[32m2024-08-12 20:16:42.583\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 30 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 3 pages\u001b[0m\n"
+      "\u001b[32m2024-08-13 10:29:48.211\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.crunchbase\u001b[0m:\u001b[36mscrape_company\u001b[0m:\u001b[36m60\u001b[0m - \u001b[1mscraping company: https://www.crunchbase.com/organization/singularity-6/people\u001b[0m\n",
+      "\u001b[32m2024-08-13 10:32:13.640\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/Singularity-6-Reviews-E3342660.htm\u001b[0m\n",
+      "\u001b[32m2024-08-13 10:32:20.101\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/Singularity-6-Reviews-E3342660.htm, scraping remaining 2 pages\u001b[0m\n",
+      "\u001b[32m2024-08-13 10:32:25.133\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 21 reviews from https://www.glassdoor.com/Reviews/Singularity-6-Reviews-E3342660.htm in 3 pages\u001b[0m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Glassdoor: The prompt context has 16,256 characters in 30 reviews\n",
-      "78,352 characters in unified context\n",
-      "Written to evaluation/98point6_98point6/20240812_201722.md\n"
+      "Glassdoor: The prompt context has 23,610 characters in 21 reviews\n",
+      "Failed to get article from https://www.mmorpg.com/news/daybreak-games-has-acquired-palia-developer-singularity-6-2000132085: 403\n",
+      "Failed to get article from https://forums.mmorpg.com/discussion/504931/palia-developer-singularity-6-rocked-by-more-layoffs-affecting-40-of-staff-mmorpg-com: 403\n",
+      "Failed to get article from https://www.mmorpg.com/news/cozy-mmo-palia-developer-singularity-6-has-suffered-layoffs-2000131074: 403\n",
+      "Failed to get article from https://www.pcgamesn.com/palia/new-coziest-mmorpg: 403\n",
+      "Failed to get article from https://www.sportskeeda.com/mmo/news-everything-coming-palia-june-25-update-that-know-far: 403\n",
+      "Failed to get article from https://www.businesswire.com/news/home/20231214106598/en/Cozy-Community-Sim-Palia-Now-Available-on-Nintendo-Switch: 403\n",
+      "Failed to get article from https://fextralife.com/singularity-6-lays-off-35-of-its-staff-weeks-after-launching-palia-on-steam/: 403\n",
+      "News: 56,098 characters of context, 24 articles\n",
+      "Written to evaluation/Singularity_6_Palia/20240813_103546.md\n"
      ]
     }
    ],
@@ -324,9 +333,13 @@
     "        (\n",
     "            \"system\",\n",
     "            \"\"\"\n",
-    "You're an expert in business and product development.\n",
+    "You're an expert in business and product development, writing a comprehensive report about a company and its products for a prospective candidate.\n",
+    "You're detail-oriented and seek to discover and share the truth of any information you find.\n",
+    "Your commitment to intellectual honesty and rigor is expressed in your analysis by providing a balanced view of both positive and negative information, providing citations to your sources, favoring information from more reliable sources, and sharing direct quotes as appropriate.\n",
+    "\n",
+    "\n",
     "Carefully review all of the following information about a company and its product.\n",
-    "Write a comprehensive markdown summary of all information with citations to the original sources for reference.\n",
+    "Write a comprehensive report of all information with citations to the original sources for reference.\n",
     "Citations should follow the format [(Author, Source, Date)](url).\n",
     "\n",
     "Follow this template to summarize the most important information about a company and its product. Each markdown section has tips on what information is most critical.\n",
@@ -339,6 +352,9 @@
     "- Approximately how many employees work at the company?\n",
     "- What products does the company produce? What services does the company offer?\n",
     "- How does the company make money? Who are their customers in general? Is it B2B, B2C? If B2B, include example customers.\n",
+    "- Approximately how much revenue does the company generate annually?\n",
+    "- Describe the scale of the company if possible, including the number of customers, users, or clients.\n",
+    "- How are the company's products distributed or sold to users?\n",
     "\n",
     "# Key personnel\n",
     "\n",
@@ -372,11 +388,11 @@
     "\n",
     "# Bibliography\n",
     "\n",
-    "The Bibliography should include a list of all the sources used to compile the summary.\n",
+    "The Bibliography should include a list of all the sources used to compile the summary. If there are many sources, group them by type (e.g., Reddit, Glassdoor, News, Crunchbase).\n",
     "\n",
     "\n",
     "Feel free to create subheadings or additional sections as needed to capture the most important information about the company and its product.\n",
-    "Format the output as a markdown document, preserving any links in the source.\n",
+    "Format the output as a markdown document, using markdown links for citations.\n",
     "            \"\"\",\n",
     "        ),\n",
     "        (\n",
@@ -426,6 +442,11 @@
     "        })\n",
     "    result.content = result.content.strip().strip(\"```markdown\").strip(\"```\")\n",
     "\n",
+    "    input_content_length = len(reddit_result.summary_markdown) + len(glassdoor_result.summary_markdown) + len(news_result.summary_markdown) + len(crunchbase_markdown)\n",
+    "    output_content_length = len(result.content)\n",
+    "\n",
+    "    print(f\"unified_summary: input_content_length={input_content_length:,} chars, output_content_length={output_content_length:,} chars ({output_content_length/input_content_length:.0%})\")\n",
+    "\n",
     "\n",
     "    with open(eval_filename(target, extension=\"md\"), \"w\") as f:\n",
     "        f.write(result.content)\n",
@@ -434,28 +455,28 @@
     "        f.write(f\"\\n----\\n## Reddit Summary\\n{reddit_result.summary_markdown}\\n\\n\")\n",
     "\n",
     "        # Write the individual Reddit threads\n",
-    "        for thread in reddit_result.threads:\n",
-    "            f.write(f\"{reddit.fetch.submission_to_markdown(thread)}\\n\\n\")\n",
+    "        # for thread in reddit_result.threads:\n",
+    "        #     f.write(f\"{reddit.fetch.submission_to_markdown(thread)}\\n\\n\")\n",
     "\n",
     "        # Write the raw Glassdoor summary too\n",
     "        f.write(f\"\\n----\\n## Glassdoor Summary\\n{glassdoor_result.summary_markdown}\\n\\n\")\n",
     "\n",
     "        # Write the individual Glassdoor reviews\n",
-    "        for review in glassdoor_result.reviews:\n",
-    "            review_md = templates.get_template(\"glassdoor_review.md\").render(review=review)\n",
-    "            f.write(f\"{review_md}\\n\\n\")\n",
+    "        # for review in glassdoor_result.reviews:\n",
+    "        #     review_md = templates.get_template(\"glassdoor_review.md\").render(review=review)\n",
+    "        #     f.write(f\"{review_md}\\n\\n\")\n",
     "\n",
     "        # Write the raw News summary too\n",
     "        f.write(f\"\\n----\\n## News Summary\\n{news_result.summary_markdown}\\n\\n\")\n",
     "\n",
     "        # Write the raw Crunchbase summary too\n",
-    "        f.write(f\"\\n----\\n## Crunchbase Summary\\n{crunchbase_markdown}\\n\\n\")\n",
+    "        f.write(f\"\\n----\\n## Crunchbase\\n{crunchbase_markdown}\\n\\n\")\n",
     "\n",
     "        print(f\"Written to {f.name}\")\n",
     "\n",
     "await unified_summary(\n",
-    "    CompanyProduct.same(\"98point6\"), \n",
-    "    num_reddit_threads=10, \n",
+    "    CompanyProduct(\"Singularity 6\", \"Palia\"), \n",
+    "    num_reddit_threads=20, \n",
     "    max_glassdoor_review_pages=3, \n",
     "    max_glassdoor_job_pages=0,\n",
     "    max_news_articles=50\n",
