Committing before I start deleting in the migration to newspaper4k

--- a/src/test_news.ipynb
+++ b/src/test_news.ipynb
@@ -39,7 +39,7 @@
       "get_article_text: Cache hit for https://www.gamedeveloper.com/business/daybreak-acquires-struggling-palia-developer-singularity-6\n",
       "get_article_text: Cache hit for https://www.singularity6.com/news/studio-acquisition\n",
       "get_article_text: Cache hit for https://www.pcgamer.com/games/mmo/palia-studio-singularity-6-is-the-latest-studio-to-suffer-layoffs/\n",
-      "get_article_text: Cache hit for https://www.daybreakgames.com/news/dbg-s6-acquisition-announcement\n",
+      "get_article_text: Cache miss, delaying 1 seconds for https://www.daybreakgames.com/news/dbg-s6-acquisition-announcement\n",
       "get_article_text: Cache hit for https://palia.com/news/patch-177\n",
       "get_article_text: Cache hit for https://www.mmorpg.com/news/daybreak-games-has-acquired-palia-developer-singularity-6-2000132085\n",
       "get_article_text: Failed to get article from https://www.mmorpg.com/news/daybreak-games-has-acquired-palia-developer-singularity-6-2000132085: 403\n",
@@ -130,92 +130,43 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Let's try a single URL to inspect in detail\n",
-    "import requests\n",
+    "# # Let's try a single URL to inspect in detail\n",
+    "# import requests\n",
     "\n",
-    "# Cache miss: https://www.daybreakgames.com/news/dbg-s6-acquisition-announcement\n",
-    "# get_article_text: Cache hit for https://palia.com/news/patch-177\n",
     "\n",
-    "url = \"https://www.daybreakgames.com/news/dbg-s6-acquisition-announcement\"\n",
-    "response = requests.get(\n",
-    "    url,\n",
-    "    timeout=5,\n",
-    "    headers={\n",
-    "        \"Accept\": \"text/html\",\n",
-    "        \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36\",\n",
-    "    },\n",
-    ")\n",
-    "response.status_code"
+    "\n",
+    "# url = \"https://www.mmorpg.com/news/daybreak-games-has-acquired-palia-developer-singularity-6-2000132085\"\n",
+    "# response = requests.get(\n",
+    "#     url,\n",
+    "#     timeout=5,\n",
+    "#     headers={\n",
+    "#         \"Accept\": \"text/html\",\n",
+    "#         \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36\",\n",
+    "#     },\n",
+    "# )\n",
+    "# response.status_code"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "requests_cache.models.response.CachedResponse"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(response)"
+    "# type(response)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{  'Cache-Control': 'no-cache, no-store, max-age=0, must-revalidate',\n",
-      "   'Connection': 'Keep-Alive',\n",
-      "   'Content-Encoding': 'gzip',\n",
-      "   'Content-Security-Policy': \"frame-ancestors 'none'\",\n",
-      "   'Content-Type': 'text/html;charset=UTF-8',\n",
-      "   'Date': 'Wed, 14 Aug 2024 17:31:07 GMT',\n",
-      "   'Expires': '0',\n",
-      "   'Keep-Alive': 'timeout=150',\n",
-      "   'Pragma': 'no-cache',\n",
-      "   'Server': 'Apache',\n",
-      "   'Set-Cookie': 'JSESSIONID=69803A40527DC410DE11E21FBCB8775C.lvs-foyert1-5409; '\n",
-      "                 'Path=/; Secure; HttpOnly, locale=en_US; Expires=Thu, '\n",
-      "                 '14-Aug-2025 17:31:07 GMT; Path=/; Secure',\n",
-      "   'Strict-Transport-Security': 'max-age=31536000 ; includeSubDomains',\n",
-      "   'Transfer-Encoding': 'chunked',\n",
-      "   'Vary': 'Accept-Encoding,User-Agent',\n",
-      "   'X-Content-Type-Options': 'nosniff',\n",
-      "   'X-Frame-Options': 'DENY, DENY',\n",
-      "   'X-XSS-Protection': '1; mode=block'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pprint import pprint\n",
+    "# from pprint import pprint\n",
     "\n",
-    "pprint(dict(response.headers), indent=3)"
+    "# pprint(dict(response.headers), indent=3)"
    ]
   },
   {
@@ -273,75 +224,233 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.237821"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from datetime import datetime, timedelta\n",
+    "# # Let's figure out why the BS code doesn't extract the article content from missing results\n",
+    "# from bs4 import BeautifulSoup\n",
     "\n",
-    "# I'm pretty sure this is the time it took the uncached response\n",
-    "response.elapsed / timedelta(seconds=1)"
+    "# soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "# article = soup.find(\"article\")\n",
+    "# if article:\n",
+    "#     print(f\"\"\"# Article text\\n{article.get_text().strip()}\"\"\")\n",
+    "# else:\n",
+    "#     print(f\"# soup.get_text()\\n{soup.get_text().strip()}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "requests_cache.models.response.CachedResponse"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(response)\n",
+    "# from newspaper import fulltext\n",
     "\n",
-    "# cached: requests_cache.models.response.CachedResponse\n",
-    "# not cached: requests_cache.models.response.OriginalResponse"
+    "# # >>> html = requests.get(...).text\n",
+    "# # text = fulltext(response.text)\n",
+    "\n",
+    "\n",
+    "# for url, content in result.article_markdowns.items():\n",
+    "#     if \"reddit\" not in url:\n",
+    "#         print(f\"# {url}\")\n",
+    "#         response = requests.get(\n",
+    "#             url,\n",
+    "#             timeout=5,\n",
+    "#             headers={\n",
+    "#                 \"Accept\": \"text/html\",\n",
+    "#                 \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36\",\n",
+    "#             },\n",
+    "#         )\n",
+    "\n",
+    "#         if not response.ok:\n",
+    "#             print(f\"Response not OK: {response.status_code}\")\n",
+    "#             continue\n",
+    "\n",
+    "#         try:\n",
+    "#             text = fulltext(response.text)\n",
+    "#             print(f\"{text[:500]}...\")\n",
+    "#         except AttributeError:\n",
+    "#             print(f\"Failed extraction on: {response.text[:500]}...\")\n",
+    "\n",
+    "#         # soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "#         # article = soup.find(\"article\")\n",
+    "#         # if article:\n",
+    "#         #     print(f\"\"\"## Article text\\n{article.get_text().strip()}\"\"\")\n",
+    "#         # else:\n",
+    "#         #     print(f\"## soup.get_text()\\n{soup.get_text().strip()}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2024, 8, 14, 10, 31, 6, 492720, tzinfo=<DstTzInfo 'US/Pacific' PDT-1 day, 17:00:00 DST>)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# Daybreak Acquires Singularity 6 Announcement by [] on 2024-07-01 16:30:00\n",
+      "Daybreak Games, Singularity 6 to Collaborate on Development of Palia, a Cozy Community Multiplayer Online Game\n",
+      "\n",
+      "SAN DIEGO, Calif. -- July 1, 2024 -- Daybreak Game Company, a global publisher and developer of large-scale multiplayer online games, today announced it acquired Singularity 6 (S6), the Los Angeles-based developer of the popular multiplayer cozy community online game, Palia, as a wholly owned subsidiary.\n",
+      "\n",
+      "“We are thrilled to welcome Singularity 6 to Daybreak Games,” said Ji Ham, CEO of...\n",
+      "      \n"
+     ]
     }
    ],
    "source": [
-    "import pytz\n",
+    "# with newspaper3k (abandoned)\n",
+    "# from newspaper import Article\n",
+    "# article = Article(\"https://www.daybreakgames.com/news/dbg-s6-acquisition-announcement\")\n",
+    "# article.download()\n",
+    "# article.parse()\n",
     "\n",
-    "# Assuming response.created_at is in UTC timezone\n",
-    "utc_time = response.created_at\n",
+    "# print(f\"\"\"\n",
+    "# # {article.title} by {article.authors}\n",
+    "# {article.text[:500]}...\n",
+    "#       \"\"\")\n",
     "\n",
-    "# Convert UTC time to US/Pacific timezone\n",
-    "pacific_timezone = pytz.timezone('US/Pacific')\n",
-    "pacific_time = utc_time.astimezone(pacific_timezone)\n",
+    "import requests\n",
     "\n",
-    "pacific_time"
+    "\n",
+    "\n",
+    "url = \"https://www.daybreakgames.com/news/dbg-s6-acquisition-announcement\"\n",
+    "response = requests.get(\n",
+    "    url,\n",
+    "    timeout=5,\n",
+    "    headers={\n",
+    "        \"Accept\": \"text/html\",\n",
+    "        \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36\",\n",
+    "    },\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "\n",
+    "# with newspaper4k\n",
+    "import newspaper\n",
+    "article = newspaper.article(response.url, language='en', input_html=response.text)\n",
+    "article.parse()\n",
+    "# article.nlp()\n",
+    "\n",
+    "# Extracted information\n",
+    "# yield {\n",
+    "# 'url': response.url,\n",
+    "# 'title': article.title,\n",
+    "# 'authors': article.authors,\n",
+    "# 'text': article.text,\n",
+    "# 'publish_date': article.publish_date,\n",
+    "# 'keywords': article.keywords,\n",
+    "# 'summary': article.summary,\n",
+    "# }\n",
+    "print(f\"\"\"\n",
+    "# {article.title} by {article.authors} on {article.publish_date}\n",
+    "{article.text[:500]}...\n",
+    "      \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# Update: Palia studio Singularity 6 confirms 36 workers have been laid off by ['Danielle Riendeau'] on 2024-05-16 21:31:45+00:00\n",
+      "Update (05/17/24): Singularity 6 has told Game Developer it has laid off 36 staffers to navigate through a \"tough economic period.\" The studio said it will continue supporting Palia following the job cuts.\n",
+      "\n",
+      "\"Unfortunately we have had to restructure and reduce the size of our team as we stay focused on supporting Palia and serving our community long term. We had to let 36 of our colleagues go yesterday, in an effort to navigate this tough economic period,\" reads a statement issued by a company sp...\n",
+      "            \n",
+      "\n",
+      "# Daybreak acquires struggling Palia developer Singularity 6 by ['Chris Kerr'] on 2024-07-02 08:53:11+00:00\n",
+      "MMO specialist Daybreak has acquired Palia developer Singularity 6 (S6) for an undisclosed fee.\n",
+      "\n",
+      "Daybreak, known for developing EverQuest and PlanetSide 2, said Singularity 6 will join its ranks as a wholly owned subsidiary.\n",
+      "\n",
+      "\"We are thrilled to welcome Singularity 6 to Daybreak Games. S6 is an excellent addition to our development studios, renowned for their success in creating large-scale online games and content,\" said Daybreak CEO, Ji Ham, in a press release.\n",
+      "\n",
+      "\"Their debut title, Palia, is a...\n",
+      "            \n",
+      "\n",
+      "# Singularity 6, Daybreak Game Company Cozy Up in Studio Acquisition by [] on None\n",
+      "The Singularity 6 team has some exciting news to share that is bigger than Kaiju Frogbert (if you can believe that’s even possible!). As of today, we’re adding a new chapter to the S6 lore: Acquisition. Some folks can find reading this chapter to be scary. But it's far from it. Our team is absolutely thrilled to be joining forces with Daybreak Game Company, a subsidiary of Enad Global 7 AB (EG7), known for publishing and supporting some of the world’s most popular and successful online multiplay...\n",
+      "            \n",
+      "\n",
+      "# Palia studio Singularity 6 is the latest studio to suffer layoffs by ['Mollie Taylor'] on 2024-04-05 16:41:47+00:00\n",
+      "Singularity 6, the studio behind the cosy MMO Palia, is the latest developer to suffer layoffs. Just under 50 developers, around one third of the company, have been let go according to Polygon reporter Nicole Carpenter.\n",
+      "\n",
+      "Environmental artist Daphne Fiato tweeted \"Whelp, I've been laid off,\" following up with \"49 people Thanos snapped\". Other Singularity 6 folk joined to reveal they'd also been laid off, including Brian Ernst who tweeted they'd been with the developer for five years. One develope...\n",
+      "            \n",
+      "\n",
+      "# Daybreak Acquires Singularity 6 Announcement by [] on 2024-07-01 16:30:00\n",
+      "Daybreak Games, Singularity 6 to Collaborate on Development of Palia, a Cozy Community Multiplayer Online Game\n",
+      "\n",
+      "SAN DIEGO, Calif. -- July 1, 2024 -- Daybreak Game Company, a global publisher and developer of large-scale multiplayer online games, today announced it acquired Singularity 6 (S6), the Los Angeles-based developer of the popular multiplayer cozy community online game, Palia, as a wholly owned subsidiary.\n",
+      "\n",
+      "“We are thrilled to welcome Singularity 6 to Daybreak Games,” said Ji Ham, CEO of...\n",
+      "            \n",
+      "\n",
+      "# Patch 0.177 Notes by [] on None\n",
+      "📸Screenshot taken by TinyHydra\n",
+      "\n",
+      "It’s Bug-Hunting Season!\n",
+      "\n",
+      "As promised in our last dev update, this patch is dedicated to squashing a whole lotta bugs that have been reported to us by the players! Of course, we just couldn’t help ourselves and decided to add in some new features and content we know Palians all over are sure to enjoy. That includes not one, not two, but THREE new decor sets! Take a look.\n",
+      "\n",
+      "At a Glance\n",
+      "\n",
+      "Several new decor sets, including the steampunk-inspired PalTech set. ♨️\n",
+      "\n",
+      "Tons o...\n",
+      "            \n",
+      "Response not OK for https://www.mmorpg.com/news/daybreak-games-has-acquired-palia-developer-singularity-6-2000132085: 403\n",
+      "\n",
+      "# Patch 0.180 Notes by [] on None\n",
+      "At a Glance\n",
+      "\n",
+      "Give your home a major upgrade by unlocking the Grand Harvest House, utilizing Building Blocks, and adding in some Pavers to create some walkways! 🏠\n",
+      "\n",
+      "Add some adorable insect plushies to your home today! 🐞 Or perhaps build out a library of BOOKS! 📚\n",
+      "\n",
+      "Enjoy Friendship Level 5 Quests with Jina, Hekla, and Einar. 🔍\n",
+      "\n",
+      "Roleplayers rejoice! Chat bubbles are now here! 💬\n",
+      "\n",
+      "Hotpot is now a permanent addition in the Underground Black Market. 🍜\n",
+      "\n",
+      "New ways to elevate your look! 💅🌸🦊⛏️\n",
+      "\n",
+      "…and so much ...\n",
+      "            \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reprocess everything\n",
+    "for url, content in result.article_markdowns.items():\n",
+    "    if \"reddit\" not in url:\n",
+    "        response = requests.get(\n",
+    "            url,\n",
+    "            timeout=5,\n",
+    "            headers={\n",
+    "                \"Accept\": \"text/html\",\n",
+    "                \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36\",\n",
+    "            },\n",
+    "        )\n",
+    "\n",
+    "        if not response.ok:\n",
+    "            print(f\"Response not OK for {url}: {response.status_code}\")\n",
+    "            continue\n",
+    "\n",
+    "        article = newspaper.article(response.url, language='en', input_html=response.text)\n",
+    "        article.parse()\n",
+    "        print(f\"\"\"\n",
+    "# {article.title} by {article.authors} on {article.publish_date}\n",
+    "{article.text[:500]}...\n",
+    "            \"\"\")\n",
+    "\n"
    ]
   },
   {
